syntax = "proto3";

package example.simple;

// Resolve Issue: https://github.com/techschool/pcbook-go/issues/3
option go_package = "./protoexample";

message Simple {
    uint32 id = 1;
    bool is_simple = 2;
    string name = 3;
    repeated int32 sample_lists =4;
}